SUBDIRS = 
bin_PROGRAMS = jarch3_test
ACLOCAL_AMFLAGS = -I m4

jarch3_test_SOURCES = jarch3.cpp jarch3_common_commands.cpp jarch3_configuration.cpp jarch3_device.cpp jarch3_driver.cpp jarch3_driver_linux_sgio.cpp jarch3_test.cpp
jarch3_test_CXXFLAGS = -Wall -Wunused -Wextra -pedantic -Wno-long-long -std=gnu++0x -D_FILE_OFFSET_BITS=64
jarch3_test_LDFLAGS = 
jarch3_test_LDADD = 

